--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -94,6 +94,7 @@ summary {
 details {
   border-bottom:3px solid #ffcd00;;
   padding-bottom:5px;
+  padding-top:5px;
   margin:5px;
 }
 
@@ -116,8 +117,8 @@ input,
 select,
 textarea {
     font-size: 1em;
-    padding-left:1em;
-    padding-right:1em;
+    padding-left:0.75em;
+    padding-right:0.75em;
     word-wrap: break-word
 }
 
