--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,125 +1,1 @@
-/* Fonts */
-
-body,
-button,
-input,
-select,
-textarea {
-  font-size: 1.25em;
-  font-family: Helvetica, Siyam Rupali, sans-serif;
-  line-height: 1.6em;
-}
-
-.title,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-size:1.55556em;
-  font-family: Helvetica , Siyam Rupali, sans-serif;
-}
-
-code,kbd,pre,tt,var {
-  font-family: monospace;
-}
-
-/* Page width */
-
-.comments-container #disqus_thread,
-.entry-content,
-.entry-cover,
-.entry-cover figcaption,
-.entry-footer,
-.entry-nav,
-.entry-toc,
-.footer,
-.header,
-.home-sections,
-.list,
-.pagination,
-.term-cloud {
-  max-width: 600px;
-  padding-left:initial;
-  padding-right:initial;
-}
-
-/* Main title */
-
-.header-info .title {
-  text-transform: unset;
-}
-
-/* Links  */
-
-.entry-content a,
-.list-item-title a  {
-  border-bottom: .125em solid blue;
-  color:blue;
-}
-
-.entry-content a:visited,
-.list-item-title a:visited {
-  border-bottom: .125em solid purple;
-  color: purple;
-}
-
-.entry-content a:active,
-.entry-content a:focus,
-.entry-content a:hover {
-  border-bottom-color: #ffcd00;
-}
-
-/* Blockquote */
-
-blockquote {
-  background:#e0e0e0;
-  padding:1em;
-  font-size:1em;
-}
-
-/* Footnotes */
-
-div .footnotes ol li {
-  padding-bottom: 1em;
-}
-
-/* Details */
-
-summary {
-    display: list-item;
-}
-
-details {
-  border-bottom:3px solid #ffcd00;;
-  padding-bottom:5px;
-  padding-top:5px;
-  margin:5px;
-}
-
-details span:last-of-type {
-  font-size: smaller;
-  font-family:
-}
-
-img {
-  min-with:100%
-}
-
-/* Small screen */
-
-@media (max-width:600px){
-
-body,
-button,
-input,
-select,
-textarea {
-    font-size: 1em;
-    padding-left:0.75em;
-    padding-right:0.75em;
-    word-wrap: break-word
-}
-
-}
+body,button,input,select,textarea{font-size:1.25em;font-family:Helvetica, sans-serif;line-height:1.6em}.title,h1,h2,h3,h4,h5,h6{font-size:1.55556em;font-family:Helvetica, sans-serif}code,kbd,pre,tt,var{font-family:monospace}.comments-container #disqus_thread,.entry-content,.entry-cover,.entry-cover figcaption,.entry-footer,.entry-nav,.entry-toc,.footer,.header,.home-sections,.list,.pagination,.term-cloud{max-width:600px;padding-left:initial;padding-right:initial}.header-info .title{text-transform:unset}.entry-content a,.list-item-title a{border-bottom:0.125em solid blue;color:blue}.entry-content a:visited,.list-item-title a:visited{border-bottom:0.125em solid purple;color:purple}.entry-content a:active,.entry-content a:focus,.entry-content a:hover{border-bottom-color:#ffcd00}blockquote{background:#e0e0e0;padding:1em;font-size:1em}div .footnotes ol li{padding-bottom:1em}summary{display:list-item}details{border-bottom:3px solid #ffcd00;padding-bottom:5px;padding-top:5px;margin:5px}details span:last-of-type{font-size:smaller;font-family:}img{min-with:100%}@media (max-width:600px){body,button,input,select,textarea{font-size:1em;padding-left:0.75em;padding-right:0.75em;word-wrap:break-word}}
